--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "url": "git://github.com/prosemirror/prosemirror-example-setup.git"
   },
   "dependencies": {
+    "prosemirror-collab": "^1.3.1",
     "prosemirror-commands": "^1.0.0",
     "prosemirror-dropcursor": "^1.0.0",
     "prosemirror-gapcursor": "^1.0.0",
